# Copyright (c) 2016 Qualcomm Technologies, Inc.
# All Rights Reserved.
# Confidential and Proprietary - Qualcomm Technologies, Inc.

declare_args() {
  web_refiner_native_libs = [
    "libswewebrefiner.so"
  ]
  web_refiner_resource_dirs = [
    "$root_out_dir/gen/components/web_refiner/java/res"
  ]
  web_refiner_dependencies = [
    "//components/web_refiner:libswewebrefiner",
    "//components/web_refiner:libswewebrefiner_java",
  ]
}
