# Copyright (c) 2016 Qualcomm Technologies, Inc.
# All Rights Reserved.
# Confidential and Proprietary - Qualcomm Technologies, Inc.

declare_args() {
  web_refiner_resource_dirs = [ "//components/web_refiner/extracted/res" ]
  web_refiner_native_deps = [ "//components/web_refiner:libswewebrefiner" ]
  web_refiner_java_deps = [ "//components/web_refiner:libswewebrefiner_java" ]
}
